[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is the first training project from the Python-developer profession on Hexlet.io."
authors = ["Irina Kurus <evans.mira@yandex.ru>"]
readme = "README.md"
packages = [{ include = "brain_games" },]
classifiers = [
  "Topic :: Games/Entertainment",
  "Environment :: Console",
  "Programming Language :: Python :: 3.8.1",
  "Operating System :: POSIX :: Linux",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
]
repository = "https://github.com/irakuruss/python-project-49"

[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
